--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://52.87.234.152:8081/repository/ebay-bts-release/</url>
+	      <url>hhttp://54.147.56.223:8081/repository/td-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://52.87.234.152:8081/repository/ebay-bts-snapshot/</url>
+	      <url>http://54.147.56.223:8081/repository/td-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
